@@ -1,11 +1,11 @@
 /*
- *    Copyright 2016-2021 the original author or authors.
+ *    Copyright 2016-2025 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
  *    You may obtain a copy of the License at
  *
- *       http://www.apache.org/licenses/LICENSE-2.0
+ *       https://www.apache.org/licenses/LICENSE-2.0
  *
  *    Unless required by applicable law or agreed to in writing, software
  *    distributed under the License is distributed on an "AS IS" BASIS,
@@ -19,7 +19,8 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
+
+import org.jspecify.annotations.Nullable;
 
 public class BatchInsert<T> {
     private final String insertStatement;
@@ -31,14 +32,14 @@ public class BatchInsert<T> {
     }
 
     /**
-     * Returns a list of InsertStatement objects.  This is useful for MyBatis batch support.
+     * Returns a list of InsertStatement objects. This is useful for MyBatis batch support.
      *
      * @return a List of InsertStatements
      */
     public List<InsertStatementProvider<T>> insertStatements() {
         return records.stream()
                 .map(this::toInsertStatement)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private InsertStatementProvider<T> toInsertStatement(T row) {
@@ -48,7 +49,7 @@ public class BatchInsert<T> {
     }
 
     /**
-     * Returns the generated SQL for this batch.  This is useful for Spring JDBC batch support.
+     * Returns the generated SQL for this batch. This is useful for Spring JDBC batch support.
      *
      * @return the generated INSERT statement
      */
@@ -57,7 +58,7 @@ public class BatchInsert<T> {
     }
 
     public List<T> getRecords() {
-        return Collections.unmodifiableList(records);
+        return records;
     }
 
     public static <T> Builder<T> withRecords(List<T> records) {
@@ -65,7 +66,7 @@ public class BatchInsert<T> {
     }
 
     public static class Builder<T> {
-        private String insertStatement;
+        private @Nullable String insertStatement;
         private final List<T> records = new ArrayList<>();
 
         public Builder<T> withInsertStatement(String insertStatement) {
